--- a/TalismanSqlForum/Views/ForumThemes/Index.cshtml
+++ b/TalismanSqlForum/Views/ForumThemes/Index.cshtml
@@ -40,7 +40,8 @@
                         <div class="listview-outlook">
                             @foreach (var item in tForumThemes_top)
                         {
-                        <a href="@Url.Action("Index", "ForumMessages", new {id = item.Id})" class="list">
+                        <div class="list">
+                                <a href="@Url.Action("Index", "ForumMessages", new {id = item.Id})">
                             <div class="list-content">
                                 <div class="tile half bg-white">
                                     <div class="tile-content icon">
@@ -82,24 +83,28 @@
                                 <div class="button bg-transparent fg-gray  place-left">
                                     <i class="icon-calendar on-left"></i>
                                     @item.tForumThemes_datetime
-                                </div>
-                                @if (item.tForumMessages.Count > 0)
-                                    {
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        <i class="icon-calendar on-left"></i>
-                                        @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tForumMessages_datetime
-                                    </div>
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        <i class="icon-user on-left"></i>
-                                        @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tUsers.NickName
-                                    </div>
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        Последнее сообщение
-                                    </div>
-
-                                    }
+                                </div>                               
                             </div>
                         </a>
+                                @if (item.tForumMessages.Count > 0)
+                                {
+                                    <a href="@Url.Action("Index", "ForumMessages", new {id = item.Id, id_list = item.tForumList.Id})#m_@item.tForumMessages.OrderByDescending(a=> a.tForumMessages_datetime).First().Id"
+                                       class="place-bottom-right"
+                                       style="z-index:99;">
+                                        <div class="button bg-transparent fg-lightBlue place-right">
+                                            <i class="icon-calendar on-left"></i>
+                                            @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tForumMessages_datetime
+                                        </div>
+                                        <div class="button bg-transparent fg-lightBlue place-right">
+                                            <i class="icon-user on-left"></i>
+                                            @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tUsers.NickName
+                                        </div>
+                                        <div class="button bg-transparent fg-lightBlue place-right">
+                                            Последнее сообщение
+                                        </div>
+                                    </a>
+                                }
+                                </div>
                         }
                         </div>
                     }
@@ -108,61 +113,68 @@
                         <div class="listview-outlook">
                             @foreach (var item in tForumThemes)
                         {
-                        <a href="@Url.Action("Index", "ForumMessages", new {id = item.Id, id_list = item.tForumList.Id})" class="list">
-                            <div class="list-content">
-                                <div class="tile half bg-white">
-                                    <div class="tile-content icon">
-                                        @{
-                            var t = 0;
-                            if (User.Identity.IsAuthenticated)
-                            {
-                                t = TalismanSqlForum.Code.Stat.count_mess(username: User.Identity.Name, id: item.Id);
-                            }
-                            if (User.Identity.IsAuthenticated && t > 0)
-                            {
-                                            <i class="icon-mail fg-orange"></i>
-                            }
-                            else
-                            {
-                                            <i class="icon-mail fg-gray"></i>
-                            }
+                                <div class="list">
+                                    <a href="@Url.Action("Index", "ForumMessages", new {id = item.Id, id_list = item.tForumList.Id})">
+                                        <div class="list-content">
+                                            <div class="tile half bg-white">
+                                                <div class="tile-content icon">
+                                                    @{
+                                        var t = 0;
+                                        if (User.Identity.IsAuthenticated)
+                                        {
+                                            t = TalismanSqlForum.Code.Stat.count_mess(username: User.Identity.Name, id: item.Id);
                                         }
-                                    </div>
-                                    <div class="tile-status">
-                                        <span class="name center-block fg-gray">@item.tForumMessages.Count</span>
-                                    </div>
-                                </div>
+                                        if (User.Identity.IsAuthenticated && t > 0)
+                                        {
+                                                        <i class="icon-mail fg-orange"></i>
+                                        }
+                                        else
+                                        {
+                                                        <i class="icon-mail fg-gray"></i>
+                                        }
+                                                    }
+                                                </div>
+                                                <div class="tile-status">
+                                                    <span class="name center-block fg-gray">@item.tForumMessages.Count</span>
+                                                </div>
+                                            </div>
 
-                                <h5>@item.tForumThemes_name</h5>
-                                <hr style="border: 1px hidden;margin-bottom: 1px;">
-                                <div class="button bg-transparent fg-gray place-left">
-                                    Автор
-                                </div>
-                                <div class="button bg-transparent fg-gray place-left">
-                                    <i class="icon-user on-left"></i>
-                                    @item.tUsers.NickName
-                                </div>
-                                <div class="button bg-transparent fg-gray  place-left">
-                                    <i class="icon-calendar on-left"></i>
-                                    @item.tForumThemes_datetime
-                                </div>
-                                @if (item.tForumMessages.Count > 0)
-                                    {
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        <i class="icon-calendar on-left"></i>
-                                        @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tForumMessages_datetime
-                                    </div>
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        <i class="icon-user on-left"></i>
-                                        @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tUsers.NickName
-                                    </div>
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        Последнее сообщение
-                                    </div>
+                                            <h5>@item.tForumThemes_name</h5>
+                                            <hr style="border: 1px hidden;margin-bottom: 1px;">
+                                                <div class="button bg-transparent fg-gray place-left">
+                                                    Автор
+                                                </div>
+                                                <div class="button bg-transparent fg-gray place-left">
+                                                    <i class="icon-user on-left"></i>
+                                                    @item.tUsers.NickName
+                                                </div>
+                                                <div class="button bg-transparent fg-gray  place-left">
+                                                    <i class="icon-calendar on-left"></i>
+                                                    @item.tForumThemes_datetime
+                                                </div>                                    
+                                        </div>
+                                    </a>
+                                    @if(item.tForumMessages.Count > 0)
+                                    { 
+                                        <a href="@Url.Action("Index", "ForumMessages", new {id = item.Id, id_list = item.tForumList.Id})#m_@item.tForumMessages.OrderByDescending(a=> a.tForumMessages_datetime).First().Id"
+                                           class="place-bottom-right"
+                                           style="z-index:99;"
+                                           >
+                                            <div class="button bg-transparent fg-lightBlue place-right">
+                                                <i class="icon-calendar on-left"></i>
+                                                @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tForumMessages_datetime
+                                            </div>
+                                            <div class="button bg-transparent fg-lightBlue place-right">
+                                                <i class="icon-user on-left"></i>
+                                                @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tUsers.NickName
+                                            </div>
+                                            <div class="button bg-transparent fg-lightBlue place-right">
+                                                Последнее сообщение
+                                            </div>
+                                        </a>
                                     }
                             </div>
-                        </a>
-                        }
+                         }
                         </div>
                     }
                 }
