Администрирование пользователей - вторая версия

--- a/TalismanSqlForum/Views/Shared/_LayoutAdmi.cshtml
+++ b/TalismanSqlForum/Views/Shared/_LayoutAdmi.cshtml
@@ -43,6 +43,12 @@
                         </a>
                     </li>
                     <li>
+                        <a href="@Url.Action("Users","AdminUser")">
+                            <i class="icon-user"></i>
+                            Пользователи V2
+                        </a>
+                    </li>
+                    <li>
                         <a href="@Url.Action("Forum","Admin")">
                             <i class="icon-list"></i>
                             список форумов
