--- a/TalismanSqlForum/Views/AdminUser/UserPartital/_UsersIsNew.cshtml
+++ b/TalismanSqlForum/Views/AdminUser/UserPartital/_UsersIsNew.cshtml
@@ -3,13 +3,17 @@
     foreach (var item in t.OrderByDescending(a => a.DateReg))
     {
         <div class="panel" data-role="panel">
-            <div class="panel-header bg-lightBlue fg-white">
+            <div class="panel-header fg-black" 
+                 style="background-color:#C8E3EF !important;
+font-family: Arial,Helvetica,sans-serif;
+font-size: 1.5rem;
+padding: 4px;">
                 @item.NickName
                 <i class="icon-calendar"></i>
                 @item.DateReg
             </div>
             <div class="panel-content">
-                <div class="row">
+                <div class="row" style="margin-top:0;">
                     <table class="table striped bordered hovered">
                         <thead>
                             <tr>
