--- a/TalismanSqlForum/Views/Shared/_Layout.cshtml
+++ b/TalismanSqlForum/Views/Shared/_Layout.cshtml
@@ -65,28 +65,21 @@
                             @User.Identity.Name
                         </a>
                         <text>)</text>
+                        <a href="@Url.Action("New","Notifications")"
+                           class="fg-black">
+                            <i class="icon-comments-4"></i>
+                            @{
+                        var c = TalismanSqlForum.Code.Notify.Count(User.Identity.Name);
+                        <text>
+                            @c
+                        </text>
+                            }
+                        </a>
                     }
                 </div>
                 @RenderBody()
             </div>
         </div>
-        @if (User.Identity.IsAuthenticated)
-        {
-            <a href="@Url.Action("New","Notifications")"
-               class="element place-right fg-black" 
-               style="top: 50%;
-                        position: absolute;
-                        right: 0px;">
-                <i class="icon-comments-4"></i>
-                @{
-            var c = TalismanSqlForum.Code.Notify.Count(User.Identity.Name);
-            <text>
-                @c
-            </text>
-                }
-            </a>
-        }
-
     </div>
     <div class="clearfix">
         <hr />
