--- a/TalismanSqlForum/Views/AdminUser/UserPartital/_UsersModerator.cshtml
+++ b/TalismanSqlForum/Views/AdminUser/UserPartital/_UsersModerator.cshtml
@@ -8,9 +8,11 @@
                 <thead>
                     <tr>
                         <th class="text-left">Email</th>
+                        <th class="text-left">Дата регистрации</th>
                         <th class="text-left">Учреждение</th>
                         <th class="text-left">Телефон</th>
                         <th class="text-left">ИНН</th>
+                        <th class="text-left">Действия</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -20,9 +22,16 @@
                         {
                             <tr>
                                 <td>@item.Email</td>
+                                <td>@item.DateReg</td>
                                 <td>@item.Mnemo_Org</td>
                                 <td>@item.PhoneNumber</td>
                                 <td>@item.Inn</td>
+                                <td>
+                                    @using (Html.BeginForm("DelUser", "AdminUser", new { id = @item.Id }, FormMethod.Post, new { @class = "place-right"}))
+                                    {
+                                        <button type="submit" class="icon-remove bg-transparent" data-hint="Удалить"></button>
+                                    }
+                                </td>
                             </tr>
                         }
                     }
