--- a/TalismanSqlForum/Views/AdminUser/UserPartital/_UsersOther.cshtml
+++ b/TalismanSqlForum/Views/AdminUser/UserPartital/_UsersOther.cshtml
@@ -12,7 +12,7 @@
                         <th class="text-left">Учреждение</th>
                         <th class="text-left">Телефон</th>
                         <th class="text-left">ИНН</th>
-                        <th class="text-left">Удалить</th>
+                        <th class="text-left">Действия</th>
                     </tr>
                 </thead>
                 <tbody>
