--- a/TalismanSqlForum/Views/ForumMessages/Index.cshtml
+++ b/TalismanSqlForum/Views/ForumMessages/Index.cshtml
@@ -102,6 +102,11 @@
                     <i class="icon-plus on-left"></i>
                     Замечание
                 </a>
+                <a href="@Url.Action("Edit", "ForumThemes", new { id = ViewData["ForumThemes_Id"] })"
+                   class="button bg-transparent fg-gray  place-right">
+                    <i class="icon-plus on-left"></i>
+                    Редактировать
+                </a>
             </div>
         }
     </div>
