--- a/TalismanSqlForum/Views/ForumMessages/Index.cshtml
+++ b/TalismanSqlForum/Views/ForumMessages/Index.cshtml
@@ -94,7 +94,7 @@
         <div class="row bg-white offset1" style="margin-left:65px;">
             @Html.Raw(ViewData["ForumThemes_Desc"])
         </div>
-        @if (User.Identity.IsAuthenticated && (User.IsInRole("admin") || User.IsInRole("moderator")))
+        @if (User.Identity.IsAuthenticated && (bool)ViewData["ForumThemes_Is_Edit"] && (User.IsInRole("admin") || User.IsInRole("moderator")))
         {
             <div class="row bg-white">
                 <a href="@Url.Action("CreateOffer", "Moderator", new { id_themes = ViewData["ForumThemes_Id"] })"
