--- a/TalismanSqlForum/Views/Shared/_LayoutAdmi.cshtml
+++ b/TalismanSqlForum/Views/Shared/_LayoutAdmi.cshtml
@@ -54,6 +54,12 @@
                             Правила
                         </a>
                     </li>
+                    <li>
+                        <a href="@Url.Action("Bt","Admin")">
+                            <i class="icon-spin"></i>
+                            БТ
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </div>
