--- a/TalismanSqlForum/Views/ForumList/Index.cshtml
+++ b/TalismanSqlForum/Views/ForumList/Index.cshtml
@@ -34,7 +34,13 @@
 }
                             </div>
                             <div class="tile-status">
-                                <span class="name center-block fg-gray">@item.tForumThemes.Count</span>
+                                @if (User.Identity.IsAuthenticated)
+                                {
+                                    var t_mes = 0;
+                                    t_mes = TalismanSqlForum.Code.Stat.count_mess_list(username: User.Identity.Name, id: item.Id);
+                                    <span class="name center-block fg-orange" style="float:left; margin:0">@t_mes</span>
+                                }
+                                <span class="name center-block fg-gray" style="float:right; margin:0">@item.tForumThemes.Count</span>
                             </div>
                         </div>
                         <h5 style="margin-bottom:0; margin-top:0;">@item.tForumList_name</h5>
